--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,40 +7,30 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <% if user_signed_in? %>
-            <li><%= button_to 'Cerrar sesión', destroy_user_session_path, class: 'dropdown-item', method: :delete %></li>
-          <% else %>
-            <li><%= link_to 'Iniciar sesión',  new_user_session_path, class: 'dropdown-item'%></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><%= link_to 'Registro',  new_user_registration_path, class: 'dropdown-item'%></li>
-          <% end %>
-
-                                 
             <li class="nav-item dropdown">
-            
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-            </a>
-         <ul class="dropdown-menu">
-          <% if user_signed_in? %>
-            <li><%= button_to 'Cerrar sesión', destroy_user_session_path, class: 'dropdown-item', method: :delete %></li>
-          <% else %>
-            <li><%= link_to 'Iniciar sesión',  new_user_session_path, class: 'dropdown-item'%></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><%= link_to 'Registro',  new_user_registration_path, class: 'dropdown-item'%></li>
-          <% end %>
-        </ul>
-        </li>
-    </div>
-    </div>
  </nav>
-
-<li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-  <% if user_signed_in? %>
-    Hola <%= current_user.email %>
-  <% else %>
-    Dale registrate o conectate
-  <% end %>
- </a>
+<li class="nav-item dropdown-toggle">
+ <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><% if user_signed_in? %>
+ Hola <%= current_user.email %>
+ <% else %>
+ Dale registrate o conectate
+ <% end %></a>
+<ul class="dropdown-menu">
+ <% if user_signed_in? %>
+ <li><%= button_to 'Cerrar sesión', destroy_user_session_path, class: 'dropdown-item', method:
+:delete %></li>
+ <% else %>
+ <li><%= link_to 'Iniciar sesión', new_user_session_path, class: 'dropdown-item'%></li>
+ <li><hr class="dropdown-divider"></li>
+ <li><%= link_to 'Registro', new_user_registration_path, class: 'dropdown-item'%></li>
+ <% end %>
+</ul>
 </li>
+
+
+ 
+ 
+ 
+ 
+ 
+</a>
